telemetry/derive/tests/ui_fail/args_no_wsv.stderr
error: At least one argument must be a `WorldStateView`.
 --> tests/ui_fail/args_no_wsv.rs:6:12
  |
6 | fn execute(_wsv: &World) -> Result<(), ()> {
  |            ^^^^^^^^^^^^
